updated README with details of test setup on Linux platform